tests/bad/first_order.tig
/* return a function */

let
    function id_int(x:int) =
        x
in
    id_int
